PROJECT(Boost_test_example)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)

#SET(Boost_USE_STATIC_LIBS ON)
#FIND_PACKAGE(Boost 1.4.6 REQUIRED)

IF(CMAKE_COMPILER_IS_GNUCXX)
    add_definitions(-std=c++11)
ENDIF()

SET(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
SET(TEST_SIR ${PROJECT_SOURCE_DIR}/test)


INCLUDE(${PROJECT_SOURCE_DIR}/src/CMakeLists.txt)

ENABLE_TESTING()

INCLUDE(${PROJECT_SOURCE_DIR}/test/CMakeLists.txt)
